Added application layout scheme + rails dump functionality

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,20 +1,40 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Techinterview</title>
+  <title>Prep - CS, Finance, Consulting Interview Training</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
+	<header class="navbar navbar-default" role="navigation">
+	<div class="navbar-inner">
+	  <div class="container">
+	    <div id="logo" class="navbar-brand"><%= link_to "Prep", root_path %></div>
+	    <nav class="collapse navbar-collapse navbar-ex1-collapse">
+	      <% if session[:user_admin] and session[:user_id] %>
+	        <ul class="nav navbar-nav navbar-right">
+	          <li><%= link_to 'Account', edit_user_path(session[:user_id]) %></li>
+	          <li><%= link_to 'Sign out', logout_path(session[:user_id]) %></li>
+	        </ul>
+	      <% end %>
+	    </nav>
+	  </div>
+	</div>
+	</header>
 
-<% flash.each do |name, msg| %>
-  <%= content_tag :div, msg, :id => "flash_#{name}" %>
-<% end %>
+	<div id="sidebar">
+		<div id="site_description"> 
+			Welcome to Sweater Collars, where we make it easy for you to pass your interviews!
+		</div>
+		<div class="button">Mental Math</div>
+	</div>
+	<div id="main_content">
+		<% flash.each do |name, msg| %>
+		  <%= content_tag :div, msg, :id => "flash_#{name}" %>
+		<% end %>
 
-<%= link_to "To the main page!", root_path %>
-
-<%= yield %>
-
+		<%= yield %>
+	</div>
 </body>
 </html>
