--- a/app/views/problems/edit.html.erb
+++ b/app/views/problems/edit.html.erb
@@ -1,5 +1,5 @@
 <h1>Edit <%= @problem.title %></h1>
-<% form_for @problem do |f| %>
+<%= form_for @problem do |f| %>
   <p>
     <%= f.label :title %><br />
     <%= f.text_field :title %>
