--- a/app/views/problems/index.html.erb
+++ b/app/views/problems/index.html.erb
@@ -1,12 +1,16 @@
-<h1>Problems</h1>
-<% @problems.each do |problem| %>
-	<div class="problem">
-	<h2 class="problem_title"><%= problem.title %></h2>
-	<div class="problem_body"><%= problem.body %></div>
-	<%= link_to "Solve this problem!", problem_path(problem) %>
-	</div>
-<% end %>
 
+<div id="problem_container">
+	<h1>Problems</h1>
+	<% @problems.each do |problem| %>
+		<%= link_to problem_path(problem) do %>
+			<div class="problem_title"><%= problem.title %> </div>
+		<% end %>
+		<span><%= link_to "Edit", edit_problem_path(problem) if session[:user_admin] %></span>
+	<% end %>
+</div>
+
+<div class="admin">
 <% if session[:user_admin] %>
 	<%= link_to "Add a problem", new_problem_path %>
 <% end %>
+</div>
