--- a/app/views/problems/show.html.erb
+++ b/app/views/problems/show.html.erb
@@ -8,7 +8,7 @@
    	<%= label_tag :answer %><br />
 	<%= text_field_tag :answer %>
   </p>
-  <p class="button"><%= submit_tag "Submit" %></p>
+  <p class="btn"><%= submit_tag "Submit" %></p>
 
   Correct Answer: <%= @problem.answer %>
 <% end %>
