Consolidate problem new and edit / added tags feature to sort by company, problem type, difficulty

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
 	</div>
 	</header>
 
-	<div id="sidebar">
+	<div id="sidebar-wrapper">
 		<div id="site_description"> 
 			Welcome to Sweater Collars, where we make it easy for you to pass your interviews!
 		</div>
