--- a/app/views/problems/edit.html.erb
+++ b/app/views/problems/edit.html.erb
@@ -1,2 +1,2 @@
 <h1>Edit <%= @problem.title %></h1>
-<%= render partial: 'form', locals: {problem: @problem} %>
+<%= render partial: 'form', locals: {problem: @problem, label: "Edit Problem"} %>
