--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,99 +13,274 @@
  *= require_tree .
  *= require_self
  */
+@import 'normalize';
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
+$body_w: 770px;
+$sidebar_w: 200px;
+$main_margin: 50px;
+$main_w: $body_w - $sidebar_w - $main_margin;
 
-#wrapper {
-    padding-left: 0;
-    -webkit-transition: all 0.5s ease;
-    -moz-transition: all 0.5s ease;
-    -o-transition: all 0.5s ease;
-    transition: all 0.5s ease;
+$logo_color: #EFEFEF;
+
+a:hover {
+    text-decoration:none;
+    //color: #2c2c2c;
 }
 
-#wrapper.toggled {
-    padding-left: 250px;
+a {
+    color: black;
 }
 
-#sidebar-wrapper {
-    z-index: 1000;
-    float:left;
-    //position: fixed;
-    //left: 250px;
-    min-height: 600px;
-    height: auto !important;
-    height: 600px;
-    width: 20%;
-    //margin-left: -250px;
-    overflow-y: auto;
-    background: #eef;
-    -webkit-transition: all 0.5s ease;
-    -moz-transition: all 0.5s ease;
-    -o-transition: all 0.5s ease;
-    transition: all 0.5s ease;
+h1, h2 {
+    margin-top: 0px;
+    margin-bottom: 20px;
 }
 
-#wrapper.toggled #sidebar-wrapper {
-    width: 250px;
+.logo {
+    color: $logo_color;
+
 }
 
-#page-content-wrapper {
-    width: 100%;
-    position: absolute;
-    padding: 15px;
+.logo:hover {
+    color: $logo_color;
 }
 
-#wrapper.toggled #page-content-wrapper {
-    position: absolute;
-    margin-right: -250px;
+.button_to {
+
+    display:inline-block;
 }
 
-/* Sidebar Styles */
 
-.sidebar-nav {
-    position: absolute;
-    top: 0;
-    width: 250px;
-    margin: 0;
-    padding: 0;
+.flash-message {
+  &.error {
+    border: solid 4px #900;
+          background-color: #FF6565;
+        }
+  &.notice {
+    border: solid 4px #26722D;
+          background-color: #A4E7A0;
+        }
+  color: black;
+  z-index: 999;
+  position: fixed;
+  font-weight: bold;
+  width: 96%;
+  margin: 20px;
+        p {
+                font-size: 110%;
+                margin: 15px 0;
+        }
+}
+
+
+body {
+    background: url(gradient.png) top center repeat-x #b10b39;
+    color: #e1d6f3;
+    width: $body_w;
+    margin: 80px auto;
+    font-family: Arial, sans-serif;
+    font-size: 14px;
+    line-height: 1.4
+}
+
+@media screen and (max-width: 810px) {
+    body {
+        width: auto;
+        margin: 25px 20px;
+    }
+}
+
+.container {
+    //overflow: hidden;
+    height: 100%;
+}
+
+.about {
+    float: left;
+    width: $sidebar_w;
+}
+
+.about h1 {
+    margin: 0 0 20px;
+    text-align: left;
+}
+
+.about h1 img {
+    max-width: $sidebar_w;
+}
+
+.about h2 {
+    font-size: 16px;
+    margin: 0 0 20px;
+    color: white
+}
+
+.about h3 {
+    font-size: 14px;
+    margin: 0 0 20px
+}
+
+.about p {
+    margin: 0 0 20px
+}
+
+.about .user-dashboard    {
+    border: 1px solid #794771;
+    border: 1px solid rgba(255, 255, 255, 0.15);
+    padding: 10px;
+    margin: 0 0 20px;
+    border-radius: 7px
+}
+
+.about ul {
     list-style: none;
+    padding: 0;
+    margin-left: 15px;
 }
 
-.sidebar-nav li {
-    text-indent: 20px;
-    line-height: 40px;
+.about ul li {
+    margin: 5px 0 0;
+    padding: 0 0 0 4px;
+    margin-left: 20px;
+    list-style: square;
 }
 
-.sidebar-nav li a {
+.about ul li a {
+    color: #e1d6f3;
+    
+}
+
+@media screen and (max-width: 810px) {
+    .about {
+        float: none;
+        width: 100%
+    }
+
+    .about .user-dashboard, .about p, .about h2 {
+        display: none
+    }
+
+    .about h1 {
+        text-align: right
+    }
+
+    .about h1 img {
+        max-width: 115px
+    }
+}
+
+
+
+/* Main Content */
+
+ #main-content {
+    margin-left: 20px;
     display: block;
+    width: $main_w;
+    float: left;
+    margin-left: $main_margin;
+    font-family: 'open sans', Helvetica, Arial;
+
+}
+
+
+#main-content .pagination {
+    overflow: hidden
+}
+
+#main-content .pagination a {
+    display: block;
+    border: 1px solid #794771;
+    border: 1px solid rgba(255, 255, 255, 0.15);
     text-decoration: none;
-    color: #999999;
+    padding: 5px 10px;
+    border-radius: 7px
 }
 
-.sidebar-nav li a:hover {
-    text-decoration: none;
-    color: #fff;
-    background: rgba(255,255,255,0.2);
+#main-content .pagination a:hover {
+    border-color: white;
+    background: white;
+    color: #8f1845
 }
 
-.sidebar-nav li a:active,
-.sidebar-nav li a:focus {
-    text-decoration: none;
+#main-content .pagination a.prev {
+    float: left
 }
 
-.sidebar-nav > .sidebar-brand {
-    height: 65px;
-    font-size: 18px;
-    line-height: 60px;
+#main-content .pagination a.next {
+    float: right
 }
 
-.sidebar-nav > .sidebar-brand a {
-    color: #999999;
+.problem {
+
+    width: 100%;
+    background: white;
+    border-radius: 5px;
+    min-height: 100px;
+    padding: 20px;
+    color: #2C2C2C;
+    margin-bottom: 30px;
 }
 
-.sidebar-nav > .sidebar-brand a:hover {
-    color: #fff;
-    background: none;
+.problem .title a {
+    font-weight: bold;
+    margin-bottom: 10px;
+    font-size: 13px;
 }
+
+.problem .body {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    font-size: 12px;
+    font-weight: normal;
+
+
+}
+
+.tags {
+    width: 100%;
+    margin-bottom: 5px;
+}
+
+.tag {
+    margin-right: 5px;
+}
+
+.edit_problem {
+    display: inline-block;
+    margin-top: 5px;
+}
+
+.add_problem {
+    width: 100%;
+    text-align: center;
+}
+
+.problem .tags {
+    display: inline-block;
+    margin-top: 10px;
+}
+
+.problem .tag li {
+    display: inline-block;
+    font-size:7px;
+    background-color: #2222;
+    color: #efe;
+}
+
+label {
+    display: block
+}
+
+input[type="url"] {
+    width: 100%;
+}
+
+textarea {
+    width: 100%;
+    height: 300px;
+}
+
+
