--- a/app/views/problems/new.html.erb
+++ b/app/views/problems/new.html.erb
@@ -1,2 +1,2 @@
 <h1>Add a problem</h1>
-<%= render partial: 'form', locals: {problem: @problem} %>
+<%= render partial: 'form', locals: {problem: @problem, label: "Create Problem"} %>
