--- a/app/views/problems/show.html.erb
+++ b/app/views/problems/show.html.erb
@@ -8,10 +8,9 @@
 
 	
 
-	<%= form_for @problem, :class => 'form-control' do |f| %>
-	   	<%= f.label "Answer" %><br />
-		<%= f.text_field :answer, :class => "answer-field form-control" %>
-		<%= f.submit "Submit", :class => "btn btn-success active", method: :post %>
+	<%= form_tag :action => "checkanswer", :class => 'form-control' do  %>
+		<%= text_field_tag :answer, "Enter your answer...", class: "answer-field form-control", autofocus: true  %>
+		<%= submit_tag "Submit", :class => "btn btn-success active", method: :post %>
 	<% end %>
 </div>
 
