Added User Metrics controller and updated admin css

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -52,7 +52,10 @@ h1, h2 {
     display:inline-block;
 }
 
+form p {
+    margin-bottom: 20px;
 
+}
 .flash-message {
   &.error {
     border: solid 4px #900;
