--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -11,18 +11,18 @@
     </div>
   <% end %>
   <p>
-    <%= f.label :email %><br />
-    <%= f.text_field :email %>
+    <%= f.label :email %>
+    <%= f.text_field :email, :class => "form-control" %>
   </p>
   <p>
-    <%= f.label :password %><br />
-    <%= f.password_field :password %>
+    <%= f.label :password %>
+    <%= f.password_field :password, :class => "form-control" %>
   </p>
   <p>
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation %>
+    <%= f.label :password_confirmation %>
+    <%= f.password_field :password_confirmation, :class => "form-control" %>
   </p>
-  <p class="button"><%= f.submit %></p>
+  <%= f.submit "Create account", :class => "btn btn-success" %>
 <% end %>
 
 
