--- a/app/views/problems/index.html.erb
+++ b/app/views/problems/index.html.erb
@@ -1,28 +1,25 @@
+<%= form_tag problems_path, :id => "problems_search", :method => 'get' do %>
+  <p>
+    <%= text_field_tag :search, params[:search], :class => "form-control", :placeholder => "Search for a problem..." %>
+  </p>
+<% end %>
 
 <div class="problems">
-	<% @problems.each do |problem| %>
-		<div class="problem">
-			<%= link_to problem_path(problem) do %>
-				<div class="title"><%= problem.title %> </div>
-			<% end %>
-				<div class="body"><%= truncate(problem.body, length: 300) %> </div>
-			<%= displayTags(problem) %>
-
-
-			<% if session[:user_admin] %>
-			
-			<br/>
-			
-			<div class="edit_problem">
-				<%= button_to "Edit", edit_problem_path(problem), :class => "edit btn btn-warning", method: :get, :style => "display: inline-block;"  %>
-				<%= button_to "Delete", problem_path(problem), method: :delete, :class => "delete btn btn-danger", :style => "display: inline-block;" %>
-			</div>
-			
-			<% end %>
-		</div>
-	<% end %>
+<%= render 'problems' %>
 </div>
 
+
 <script>
-    MathJax.Hub.Queue(["Typeset", MathJax.Hub]);
+     $("#problems_search input").keyup(function() {
+	    $.get($("#problems_search").attr("action"), $("#problems_search").serialize(), null, "script");
+	    return false;
+	  });
 </script>
+
+<style>
+#problems_search {
+	margin-bottom: 10px;
+
+}
+
+</style>
