--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,5 +1,5 @@
 <h1>Sign up</h1>
-<%= form_for @user do |f| %>
+<%= form_for @user, :class => "form-control" do |f| %>
   <% if @user.errors.any? %>
     <div class="error_messages">
       <h2>Form is invalid</h2>
@@ -12,17 +12,17 @@
   <% end %>
   <p>
     <%= f.label :email %><br />
-    <%= f.text_field :email %>
+    <%= f.text_field :email, :class => "form-control" %>
   </p>
   <p>
     <%= f.label :password %><br />
-    <%= f.password_field :password %>
+    <%= f.password_field :password, :class => "form-control" %>
   </p>
   <p>
     <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation %>
+    <%= f.password_field :password_confirmation, :class => "form-control" %>
   </p>
-  <p class="button"><%= f.submit %></p>
+  <%= f.submit "Submit", :class => "btn btn-success" %>
 <% end %>
 
 
