--- a/app/views/user_metrics/index.html.erb
+++ b/app/views/user_metrics/index.html.erb
@@ -1,6 +1,2 @@
 <h1>Dashboard</h1>
-<p><%= timeline [
-  ["Washington", "1789-04-29", "1797-03-03"],
-  ["Adams", "1797-03-03", "1801-03-03"],
-  ["Jefferson", "1801-03-03", "1809-03-03"]
-] %></p>
+<p><%= line_chart UserMetric.group(:problem_id).maximum([:time_accessed - :time_submitted])  %></p>
